styles/site.css
html {
    width: auto;
    background-color: rgb(248, 248, 248);
}
 
body {
    font-family: 'Roboto', sans-serif;
    font-size: 16px;
    line-height: 1.6em;
    margin: 20px 20px;
}

/* header */

#cusd_logo {
    width: 60px;
    height: 60px;
}

#mobility_logo {
    width: 60px;
    height: 60px;
}

#logo-text {
    font-family: 'Roboto Mono', monospace;
    font-size: 20px;
    margin-left: 10px;
}

#home-link {
    text-decoration: none;
    color: black;
}

/* navigation bar */

nav ul li {
    list-style: none;
    font-size: 18px;
}

nav a {
    text-decoration: none;
    color: black;
}

nav a:hover {
    color: gray;
}

.mobile_nav {
    text-align: left;
}

.mobile_nav li {
    font-size: 20px;
    line-height: 3em;
    transition: all .3s ease;
}

#hamburger{
    background:none;
    position:absolute;
    top: 5px;
    right:0;
    line-height: 45px;
    padding: 15px 15px 0px 15px;
    color:rgb(57, 56, 56);
    border:0;
    font-size: 3em;
    font-weight: bolder;
    cursor: pointer;
    outline: none;
    z-index: 2;
}
 
#cross {
    background:none;
    position:absolute;
    top: 5px;
    right:0;
    padding: 18px 20px 0px 15px;
    color:rgb(57, 56, 56);
    border:0;
    font-size: 4em;
    line-height:65px;
    font-weight:bold;
    cursor:pointer;
    outline:none;
    z-index:2;

}

/* general */

img {
    width: 100%;
    align-self: center;
}

.hidden {
    display: none;
}

.rounded {
    border-radius: 5px;
}

/* homepage */

#landing-wrapper {
    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.05)), url('../images/tcat-bus.jpeg');
    background-size:cover;
    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.4);
}

#centered_heading {
    font-family: 'Montserrat', sans-serif;
    font-size: 26px;
    text-align: right;
    line-height: 1.5em;
    margin-top: 20px;
    padding: 80px 30px;
    color: white;
}

#part-one {
    background-color: #537cce;
    padding: 0 10px;
}

#emphasis {
    color: #3670e4d8;
    background-color: white;
    padding: 0 10px;
}

#emphasis-container {
    display: block;
}

#subheading {
    margin-top: 50px;
    margin-bottom: 0px;
    font-size: 24px;
    line-height: 1.4em;
    text-align: center;
}


#preview-summary {
    margin-bottom: 30px;
}

#join-us-head {
    font-size: 22px;
    line-height: 1.6em;
    margin-top: 60px;
    text-align: center;
}

.header_text {
    font-size: 30px;
    margin-top: 60px;
    margin-bottom: 15px;
}

#preview-text h3 {
    font-size: 24px;
    line-height: 1.4em;
    margin-top: -10px;
}

#preview-text {
    margin-top: 60px;
    margin-bottom: 40px;
}

#landing-wrapper {
    margin-top: 40px;
    height: 240px;
    border-radius: 5px;
}

#link-button {
    text-decoration: none;
    color: rgb(0, 0, 0);
    border: 2px solid rgb(52, 53, 55);
    font-weight: bold;
    padding: 10px 20px;
    margin-top: 40px;
    margin-bottom: 100px;
}

#link-button:hover {
    color: white;
    background-color: black;
}

/* about us page */

.who_header_text {
    font-size: 30px;
    margin-top: 60px;
    margin-bottom: 15px;
}

.socials a:hover {
    color: rgb(42, 42, 207);
}

.fa {
    padding: 10px;
    text-align: center;
    text-decoration: none;
    border-radius: 10px;
    margin-right: 5px;
    color: black;
}

#quote {
    margin-top: 40px;
}

/* our work page */

.project_preview {
    margin-top: 60px;
}

.project_summary {
    margin-bottom: 25px;
}

.project_heading_medium {
    margin-top: -12px;
}

#spaced-out {
    letter-spacing: 0.1em;
    color: gray;
    font-size: 15px;
}

.date_format {
    font-family: 'Archivo', sans-serif;
    letter-spacing: 0.03em;
    color: rgba(25, 25, 135, 0.898);
    margin-top: -15px;
}

#garage-button {
    text-decoration: none;
    color: rgb(0, 0, 0);
    border: 2px solid rgb(52, 53, 55);
    font-weight: bold;
    padding: 10px 20px;
}

#garage-button:hover {
    color: white;
    background-color: black;
}

#entry_img {
    margin-top: 30px;
    margin-bottom: 50px;
    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
}

.active-projects-header {
    font-size: 26px;
    margin-top: 60px;
    text-align: center;
}

.active-projects-row {
    margin-top: 30px;
}

.leed_preview {
    margin-top: 70px;
}

/* apply page */

#apply-heading {
    font-size: 33px;
    margin-top: 60px;
    margin-bottom: 35px;
    text-align: center;
    line-height: 1.2em;
}

.no-top-margin {
    margin-top: -5px;
}

.top-margin {
    margin-top: 20px;
}

.no-bottom-margin {
    margin-bottom: 0;
}

.centered-text {
    text-align: center;
}

#passion {
    display: block;
    width: 80%;
    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
}

#apply-text {
    padding: 10px 14px;
    background-color:rgba(181, 176, 125, 0.37);
    border-radius: 5px;

    margin: 30px auto; 
}

#socials-text {
    letter-spacing: 0.01em; 
}

/* garage page */

#garage-heading {
    font-size: 25px;
    margin-top: 40px;
    line-height: 1.3em;
    text-align: center;
}

#background-header {
    font-family: 'Montserrat', sans-serif;
    font-size: 25px;
    margin-bottom: 0;
}

#problem-brief h3, #objective h3 {
    font-family: 'Montserrat', sans-serif;
    font-size: 25px;
    margin-bottom: 0;
    text-align: center;
}

#objective ul {
    padding-left: 20px;
    line-height: 1.8em;
}

/* slideshow */

.slideshow {
    margin-top: 40px;
}

.slide {
    display: none;
}

.fade {
    animation-name: fade;
    animation-duration: 1.5s;
  }
  
@keyframes fade {
    from {opacity: .4} 
    to {opacity: 1}
}
/* ... */

